feat(api): enable swagger/cors and prep frontend for prod url